<resources>
    <string name="app_name">PartnersForPurchasing</string>
    <string name="host">http://www.itmystyle.com/ict_shopshare/</string>
    <string name="password">Password</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">การตั้งค่า</string>
    <string name="feeds">หน้าแรก</string>
    <string name="product">สินค้า</string>
    <string name="new_product">สร้างสินค้า</string>
    <string name="product_name">ชื่อสินค้า</string>
    <string name="desciption">คำอธิบาย</string>
    <string name="price">ราคา</string>
    <string name="add_more_image">เพิ่มรูป</string>
    <string name="save">บันทึก</string>
    <string name="add_to_list">ชื่นชอบ</string>
    <string name="share">แชร์</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="shop_name">ข้อมูลร้านค้า</string>
    <string name="shop_description">รายละเอียดร้านค้า</string>
    <string name="floor">ชั้น</string>
    <string name="soi">ซอย</string>
    <string name="room">ห้อง</string>
    <string name="promotion">โปรโมชั่น</string>
    <string name="signup">SignUp</string>
    <string name="signin">Login</string>
    <string name="category">หมวดหมู่</string>
    <string name="category_product">หมวดหมู่สินค้า</string>
    <string name="choose">เลือก</string>
    <string name="topic">หัวข้อโพสต์</string>
    <string name="add_image">เพิ่มรูป</string>
    <string name="dateend">DateEnd</string>
    <string name="datestart">DateStart</string>
    <string name="timestart">TimeStart</string>
    <string name="timeend">TimeEnd</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="join">เข้าร่วม</string>
    <string name="user_join">ผู้เข้าร่วม</string>
    <string name="limit_user_join">Limit User Join</string>
    <string name="date">วันที่</string>
    <string name="post_by">โพสต์ โดย</string>
    <string name="favorite_product">ชื่นชอบ</string>
    <string name="chat">แชท</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="type">ประเภท</string>
    <string name="typesub">ประเภทย่อย</string>
    <string name="accept">ตกลง</string>
    <string name="close_post">ปิดโพส</string>
    <string name="txt_notfound">ไม่พบข้อมูล</string>
    <string name="shop_info">ข้อมูลร้านค้า</string>
    <string name="shop_address">ที่อยู่ร้านค้า</string>
    <string name="send">ส่ง</string>
    <string name="enter_chat_room">เข้าสู่ห้องสนทนา</string>
    <string name="facebook_app_id">262724854151263</string>
    <string name="option_more">ตัวเลือกเพิ่มเติม</string>
    <string name="require_field">*จำเป็นต้องกรอก</string>
    <string name="promotion_detail">รายละเอียดโปรโมชั่น</string>
    <string name="male_female">ชายและหญิง</string>
    <string name="joined">คุณได้เข้าร่วมโพสนี้แล้ว</string>
    <string name="unit">หน่วยนับ</string>
    <string name="amount_require">จำนวนที่ต้องการ</string>
    <string name="find_user_share">ต้องการหาคนร่วมซื้ออีก</string>
    <string name="post_joined">โพสต์ที่ฉันเข้าร่วม</string>
</resources>
