<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@mipmap/feed"
            android:title="@string/feeds" />
        <item
            android:id="@+id/nav_product"
            android:icon="@mipmap/product_default"
            android:title="@string/product" />

        <item
            android:id="@+id/joined"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/join" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@mipmap/favorite"
            android:title="@string/favorite_product" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/signout_ico"
            android:title="ออกจากระบบ" />
    </group>


</menu>
