<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="su.ict.business59.partnersforpurchasing.PostProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <ImageView
                android:id="@+id/img_product"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@mipmap/product_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="Choose Image" />


            <EditText
                android:id="@+id/topic_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/topic" />


            <LinearLayout
                android:id="@+id/is_share_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/is_create_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/dateStart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:focusable="false"
                        android:hint="@string/datestart"
                        android:inputType="datetime" />

                    <EditText
                        android:id="@+id/timeStart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:focusable="false"
                        android:hint="@string/timestart"
                        android:inputType="datetime" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/dateEnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:focusable="false"
                        android:hint="@string/dateend"
                        android:inputType="datetime" />

                    <EditText
                        android:id="@+id/timeEnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:focusable="false"
                        android:hint="@string/timeend"
                        android:inputType="datetime" />

                </TableRow>

                <Spinner
                    android:id="@+id/spin_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/shop_name"
                    android:inputType="none" />

                <EditText
                    android:id="@+id/limit_join"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/limit_user_join"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/desc_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/desciption"
                    android:lines="2"
                    android:maxLines="4" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
