<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="su.ict.business59.partnersforpurchasing.CategoryActivity">
    <!-- Linearlaout which acts as ListView -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroupSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioBoth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/male_female" />

        </RadioGroup>

    </TableRow>

    <TableRow
        android:id="@+id/warpSpin1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/catlvl1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70" />

    </TableRow>

    <TableRow
        android:id="@+id/warpSpin2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/typesub" />

        <Spinner
            android:id="@+id/catlvl2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70" />

    </TableRow>

    <TableRow
        android:id="@+id/warpSpin3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/typesub" />

        <Spinner
            android:id="@+id/catlvl3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70" />

    </TableRow>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/accept" />


</LinearLayout>
